# SnakeMOGame

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Snake/: Console.cpp  Console.h  ConsoleBuffer.cpp  ConsoleBuffer.h  Context.cpp  Context.h  Food.cpp  Food.h  GameObject.cpp  GameObject.h  GameObjectRegistry.cpp  GameObjectRegistry.h  InputState.cpp  InputState.h  MemoryBitStream.cpp  MemoryBitStream.h  Move.cpp  MoveList.cpp  NetworkManager .cpp  NetworkManager.cpp  NetworkManager.h  ObjectManager.cpp  ObjectManager.h  ScoreBoardManager.cpp  ScoreBoardManager.h  Snake.cpp  Snake.h  Snake.sln  Snake.vcxproj  Snake.vcxproj.filters  SnakePCH.h  SnakeShared.h  SocketAddress.cpp  SocketAddress.h  SocketAddressFactory.cpp  SocketAddressFactory.h  SocketUtil.cpp  StringUtils.cpp  TCPSocket.cpp  Timing.cpp  (+7 more)
SnakeClient/: Client.cpp  Client.h  FoodClient.cpp  FoodClient.h  InputManager.cpp  InputManager.h  NetworkManagerClient.cpp  RenderManager.cpp  RenderManager.h  ReplicationManagerClient.cpp  SnakeClient.cpp  SnakeClient.h  SnakeClient.vcxproj  SnakeClient.vcxproj.filters  SnakeClientPCH.h  main.cpp
SnakeServer/: ClientProxy.cpp  ClientProxy.h  DebugPrint.cpp  DebugPrint.h  FoodManager.cpp  FoodManager.h  FoodServer.cpp  FoodServer.h  NetworkManagerServer.cpp  NetworkManagerServer.h  ReplicationManagerServer.cpp  Server.cpp  Server.h  SnakeServer.cpp  SnakeServer.h  SnakeServer.vcxproj  SnakeServer.vcxproj.filters  SnakeServerPCH.h  main.cpp
exeutable/: SnakeClient  SnakeServer
